# cf-data-research

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_clustering.py  run_embeddings.py  run_predictions.py  run_research.py  run_trajectories.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_research_tables.py  003_tag_transitions.py  004_experiment_tracking.py  005_embeddings_clusters_trajectories.py
analysis/: queries.py
app/: main.py
app/api/: deps.py  main.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  contest.py  ingestion.py  problem.py  rating_history.py  research.py  submission.py  user.py
app/research/: .feature_matrix.pkl  __init__.py  breakthrough_plateau.py  clustering.py  coordinator.py  data_quality.py  embeddings.py  expert_pathways.py  failure_analysis.py  features.py  hypothesis_gen.py  hypothesis_test.py  pattern_discovery.py  predictor.py  report_gen.py  skill_graph.py  skill_vector.py  trajectories.py  trajectory_timelines.py
app/schemas/: __init__.py  contest.py  ingestion.py  metrics.py  rating_history.py  submission.py  user.py
app/services/: analysis.py  cache.py  codeforces.py  ingestion.py
client/: package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx
docs/: architecture.md  database.md  ingestion.md  roadmap.md
examples/: analysis_queries.py  collect_and_analyze.py
scripts/: create_schema.py
tests/: conftest.py  test_analysis.py  test_api.py  test_codeforces.py  test_research.py
(+27 files in other folders)
