[project]
name = "cf-growth-lab"
version = "0.1.0"
description = "Research platform for analyzing Codeforces user growth trajectories"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "greenlet>=3.1,<4",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "pandas>=2.2,<3",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "polars>=1.15,<2",
]
analysis = [
    "polars>=1.15,<2",
    "matplotlib>=3.10,<4",
    "seaborn>=0.13,<1",
]

[project.scripts]
collect-top-users = "scrapers.jobs.collect_top_users:main"
cf-ingest = "scrapers.jobs.ingest_user:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app", "app.*", "scrapers", "scrapers.*", "analysis", "analysis.*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
